--- a/Web/src/app/components/map/map.component.scss
+++ b/Web/src/app/components/map/map.component.scss
@@ -13,6 +13,6 @@
 .toolbar-overlay {
   position: absolute;
   top: 12px;
-  left: 12px;
+  right: 12px;
   z-index: 1000;
 }
